<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_divide">\u00F7</string>
    <string name="symbol_multiple">\u00D7</string>
    <string name="symbol_equal">=</string>
    <string name="symbol_pulmi">\u00B1</string>
    <string name="symbol_back">\u232B</string>
    <string name="symbol_erase">\u2421</string>
    <string name="symbol_dot">.</string>


</resources>
