<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/input"
        android:enabled="false"
        android:singleLine="true"
        android:textSize="80sp"
        android:textColor="@color/colorBlack"
        android:layout_weight="1"
        android:textAlignment="textEnd"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_margin="1px">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_seven"
            android:id="@+id/num7"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_eight"
            android:id="@+id/num8"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_nine"
            android:id="@+id/num9"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/symbol_divide"
            android:id="@+id/symdiv"
            android:background="@drawable/btn_symbol_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/symbol_equal"
            android:id="@+id/symequ"
            android:layout_weight="1"
            android:background="@drawable/btn_symbol_x"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_margin="1px">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_four"
            android:id="@+id/num4"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_five"
            android:id="@+id/num5"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_six"
            android:id="@+id/num6"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/symbol_multiple"
            android:id="@+id/symmulti"
            android:background="@drawable/btn_symbol_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/symback"
            android:background="@drawable/btn_symbol_x"
            android:src="@drawable/backspace"
            android:padding="20sp"
            android:scaleType="centerInside"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_margin="1px">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_one"
            android:id="@+id/num1"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_two"
            android:id="@+id/num2"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_three"
            android:id="@+id/num3"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/symbol_minus"
            android:id="@+id/symmin"
            android:background="@drawable/btn_symbol_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/symera"
            android:layout_weight="1"
            android:src="@drawable/erase"
            android:scaleType="centerInside"
            android:padding="15sp"
            android:background="@drawable/btn_symbol_x"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_margin="1px">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/symbol_dot"
            android:id="@+id/symdot"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num_zero"
            android:id="@+id/num0"
            android:background="@drawable/btn_num_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/symbol_pulmi"
            android:id="@+id/sympulmi"
            android:background="@drawable/btn_symbol_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/symbol_plus"
            android:id="@+id/symplus"
            android:background="@drawable/btn_symbol_x"
            android:layout_weight="1"
            android:layout_marginRight="1px"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/hide"
            android:scaleType="fitXY"
            android:layout_weight="1"
            android:visibility="invisible"
            />
    </LinearLayout>

</LinearLayout>
